2008-06-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Improve output when a gem to uninstall
	isn't found.  Bug #20746 reported by Chad Wooley.
	* setup.rb:  Fix rdoc installation with --destdir.  Patch #20739 by
	Matthew Kent.
	* lib/rubygems/commands/install_command.rb:  Don't reset GEM_PATH when
	installing.  Fixes Bug #20746 by Chad Wooley.

2008-06-20  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: Only prepend install_destdir when especified. Fixes
	installation issues related to Windows paths (/C:/...)

2008-06-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Ensure that the entire
	dependency chain is installed.  Fixes bug reported by Chad Woolley.

2008-06-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb:  Restore matching
	everything when no name is specified, regexp matching.  Fixes bug
	#20716, bug #20717 by Chad Woolley.

2008-06-18  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems/config_file.rb:  Fix --config-file option with no
	equals and subsequent options to properly assign config file.
	Previously config file was overwritten by subsequent option.
	Fixes bug #16688.

2008-06-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/version.rb:  Gem::Version #hash and #eql? now operate
	on the version string, terms of the version string, so "1" and "1.0"
	no longer correspond to the same slot.  Fixes indexer bug reported by
	Chad Woolley.
	* setup.rb:  Fix --format-executable.  Patch #20698 by Richard Brown.
	* util/gem_prelude.rb:  Prevent infinite recursion, check for Gem now.
	Patch from ruby trunk by nobu.
	* lib/*:  Spelling cleanup.  Patch from trunk by Evan Farrar.
	* test/*:  Fixes for win32 test failures reported by Luis Lavena.
	* util/gem_prelude.rb:  Only remove methods added by gem_prelude.rb.

2008-06-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Fix quick_index generation.